build: Downgrate Java to 8 and use Log4J
These will come handy in a backport to legacy versions
that I plan, because *some* people still play them.